# calc

./: Cargo.toml  README.md  mktests.py  mkunits.py
.github/workflows/: rust.yml
src/: binary.rs  builtins.rs  eval.rs  integer.rs  lib.rs  main.rs  stack.rs
src/units/: base.rs  mod.rs  number.rs  unit.rs
tests/: conversion_fuzz.rs  integration_tests.rs
