[package]
name = "calc"
description = "A terminal-based, units-aware, RPN calculator"
version = "0.1.0"
readme = "README.md"
authors = ["electronfraud <electronfraud@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
home = "0.5.5"
itertools = "0.11.0"
once_cell = "1.18.0"
rustyline = "12.0.0"
